--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     </head>
 
     <body>
+        <h1 class="Overskrift">Black Jack</h1>
         <h2 class="dealer" id="dealer">Dealer: <span id="dealer-sum"></span></h2>
         <div id="dealer-cards">
             <img id="hidden" src="./cards/BACK.png">
         </div>
+            <div class="container">
+                <div class="text-center text-shrink">I kortspillet blackjack er målet å få en hånd så nær 21 uten å gå over. Hver spiller får to kort i begynnelsen av
+                spillet og konkurrerer mot dealeren. Spilleren har muligheten til å bli og ikke trekke flere kort, eller de kan velge å
+                trekke flere kort i et forsøk på å komme nærmere 21. Spilleren vil tape umiddelbart hvis alderen deres overstiger 21.
+                Dealeren må fortsette å trekke kort når spilleren bestemmer seg for å bli til de har en håndverdi på 17 eller mer. Hvis
+                giverens poengsum overstiger 21, vinner spilleren direkte. Hvis ikke, vinner spilleren med den høyest verdsatte hånden
+                som er under 21. Andre metoder for å vinne i blackjack inkluderer å få en "naturlig" Blackjack (et ess og et kort verdt
+                10) eller at dealeren har en hånd som er verdt mindre enn spillerens hånd, men ikke mer enn 21.</div>
+            </div>
 
         <h2 class="you" id="you">You: <span id="your-sum"></span></h2>
         <div id="your-cards"></div>
